add new file 1.css 1.png changed 1.html

--- a/1.html
+++ b/1.html
@@ -4,9 +4,25 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Test</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="1.css" type="text/css">
 </head>
 <body>
-	<div class="change"></div>
+	<div id="container">
+		<div class="header">
+			Từ Tết Nguyên đán, chiếc cầu thang được mệnh danh là "nấc thang lên thiên đường" được bố trí tại công viên Đầm Sen (quận Tân Phú, TP HCM). Mô hình này phỏng theo cầu thang vô cực từng "gây sốt" ở Đà Lạt hồi cuối năm ngoái.
+		</div><div class="clear"></div>
+		<div class="div-white">
+			<div id="div-tag">
+				<div class="tag">
+					<span>tag</span> <span class="tag-name">bong da</span>
+					<span class="right">Từ Tết Nguyên đán</span>
+				</div>
+			</div>
+			<img src="1.png" alt="hinh so 1" class="image-1">
+			<div class="paragraph">
+				Từ Tết Nguyên đán, chiếc cầu thang được mệnh danh là "nấc thang lên thiên đường" được bố trí tại công viên Đầm Sen (quận Tân Phú, TP HCM). Mô hình này phỏng theo cầu thang vô cực từng "gây sốt" ở Đà Lạt hồi cuối năm ngoái.
+			</div>
+		</div>
+	</div>
 </body>
 </html>
